<resources>
    <string name="app_name">Taskia</string>
    <string name="task_name">Task name</string>
    <string name="add_subtask">Add new subtask</string>
    <string name="subtasks">Subtasks</string>
    <string name="no_tasks">No tasks!</string>
    <string name="click_to_add">Click \"+\" button to add a new one</string>
    <string name="uncompleted_tasks">Uncompleted tasks</string>
    <string name="task_removed">Task removed</string>
    <string name="undo">undo</string>
    <string name="new_subtask">New subtask</string>
    <string name="menu_more">More menu</string>
    <string name="remove_completed">Remove all completed tasks</string>
    <string name="remove_all">Remove all tasks</string>
    <string name="share_app">Share app</string>
    <string name="menu">Menu</string>
    <string name="sure_perform_operation">Are you sure you want to perform this operation?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="no_deadline">No date</string>
    <string name="deadline">Deadline</string>
    <string name="save">Save</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="overdue_tasks">Overdue</string>
    <string name="today_tasks">Today</string>
    <string name="upcoming_tasks">Upcoming</string>
    <string name="unscheduled_tasks">Unscheduled</string>
    <string name="completed">Completed today</string>
    <string name="pick_date">Pick a date</string>
    <string name="task_completed">Task completed</string>
    <string name="remove">Remove</string>
    <string name="no_today_tasks">Nothing more to do today</string>
    <string name="relax_or_add">Relax or add a new task</string>
    <string name="complete_to_show">Complete some task to make it visible here</string>
    <string name="drag">Drag</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_end_is_coming">The end of the day is coming</string>
    <string name="unsaved_changes">You have some unsaved changes. Do you want to save it?</string>
    <string name="discard">Discard</string>
     <string name="connected_accounts">Connected accounts</string>
    <string name="add_new_account">Add new account</string>
    <string name="refresh">Refresh</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tag</string>
    <string name="clear_filters">clear</string>
    <string name="filter">filter</string>
    <string name="no_tags">No tags available</string>
    <string name="loading">Loading</string>
    <string name="emptyString" translatable="false" />
    <string name="no_time" translatable="false">--:--</string>
    <string name="pick_time">Pick a time</string>
    <string name="reset_time">No time</string>
    <string name="finish_presentation_file">Finish the presentation file</string>
    <string name="buy_present">Buy a present for Tom\'s birthday</string>
    <string name="call_alice">Call Alice</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="customize">Customize</string>
    <string name="future">Future</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="completed_that_day">Completed that day</string>
    <string name="synchronize_with_google_tasks">Synchronization with Google Tasks API</string>
    <plurals name="uncompleted_tasks_with_count">
        <item quantity="one">You have still uncompleted %d task</item>
        <item quantity="other">You have still uncompleted %d tasks</item>
    </plurals>
</resources>