...

                            }
                        }
                    },
                    floatingActionButton = {
                        FloatingActionButton(
                            modifier = Modifier.testTag("add_task_button"),
                            onClick = {
                                coroutineScope.launch(Dispatchers.Main) {
                                    taskFormViewModel.clear()
                                    taskFormViewModel.isVisible.value = true
                                    modalBottomSheetState.show()
                                }
...
