...
    if (taskList.isNotEmpty()) {
        Column {
            taskList.toList().forEach {
                val task = it.first
                val subtasks = it.second
                key(task.id) {
                    Column(modifier = Modifier.testTag("task_list")/* Modifier.animateItemPlacement()*/) {
                        TaskItem(
                            task = task,
                            subtasks = subtasks,
                            removeItemFunc = onTaskRemove,
                            toggleStatusFun = toggleStatusFun,
                            showDate = showDates,
...
